--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_coupons_project?serverTimezone=Israel&createDatabaseIfNotExist=true
-spring.datasource.username=irit13
+spring.datasource.url=jdbc:mysql://localhost:3306/Coupon-System-(server)?serverTimezone=Israel&createDatabaseIfNotExist=true
+spring.datasource.username=lidor
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,7 +11,6 @@ spring.jpa.show-sql=true
 #session.max.inactive.interval=30
 # # in seconds
 #session.remove.expired.period=60
-
 
 #testing...
  # in minutes
