--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_coupons_project?serverTimezone=Israel&createDatabaseIfNotExist=true
 spring.datasource.username=lidor
 spring.datasource.password=1234
+java.runtime.version=15
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
