change database properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_coupons_project?serverTimezone=Israel&createDatabaseIfNotExist=true
-spring.datasource.username=lidor
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://bbb9d71279f5ae:65d0833b@eu-cdbr-west-01.cleardb.com/heroku_c7b6c1ea44c37d6?reconnect=true
+spring.datasource.username=bbb9d71279f5ae
+spring.datasource.password=65d0833b
 java.runtime.version=15
 
 spring.jpa.hibernate.ddl-auto=update
