--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://b75d3da194a347:120ff6b6@us-cdbr-east-04.cleardb.com/heroku_5ff6218a125630a?reconnect=true
-spring.datasource.username=b75d3da194a347
-spring.datasource.password=120ff6b6
+spring.datasource.url=jdbc:mysql://m6ae9ttx4vsla2bi:h6c7dqhuxqawk0g4@s465z7sj4pwhp7fn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vctun56qbnxidqmc
+# spring.datasource.username=b75d3da194a347
+# spring.datasource.password=120ff6b6
 java.runtime.version=15
 
 spring.jpa.hibernate.ddl-auto=update
