--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.heroku.sdk</groupId>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>3.0.3</version>
             </plugin>
