--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.0.3</version>
             </plugin>
         </plugins>
